--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,34 @@
 /* body {
   background-color: gray;
 } */
+
+.test {
+  border: 1px solid #000;
+  margin: 5px;
+  padding: 5px;
+}
+
+#left-sidebar {
+  float: left;
+  width: 30%;
+  border-color: red;
+}
+
+#content-wrap {
+  border-color: blue;
+}
+
+#content {
+  border-color: green;
+  padding-left: 35%;
+}
+
 .page-block {
   background-color: white;
+  padding: 24px;
+  margin: 10px;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0);
+  border-radius: 2px;
 }
 
 body {
