--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 }
 
 .page-block {
-  background-color: white;
+  background-color:rgb(200, 255, 255);
   padding: 24px;
   margin: 10px;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0);
@@ -32,7 +32,7 @@
 }
 
 body {
-  background-color: #f5f5f5;
+  background-color: rgb(201, 200, 255);
 }
 div {
   background-color: white;
