--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   background-color: gray;
 } */
 
-.test {
+.test1 {
   border: 1px solid #000;
   margin: 5px;
   padding: 5px;
@@ -24,7 +24,7 @@
 }
 
 .page-block {
-  background-color:rgb(200, 255, 255);
+  background-color: rgb(200, 255, 255);
   padding: 24px;
   margin: 10px;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0);
